# linopy

./: .coverage  .coveragerc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  codecov.yml  justfile  pyproject.toml  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.md
.github/workflows/: CI.yaml  benchmark-smoke.yml  cd.yml  ci.yaml  claude-code-review.yml  claude-code-review.yml.bkp  claude.yml  codeql.yml  codspeed-macro.yml  codspeed-memory.yml  codspeed.yml  deploy.yml  gh-release.yml  pythonapp.yml  release.yml  semantics-report.yml  test-models.yml  test-notebooks.yml  test.yaml  test.yml
arithmetics-design/: convention.md  docs-plan.md  goals.md  legacy-removal.md  multiindex-feasibility.md  open-items.md
benchmark/: README.md  Snakefile  bench_pypsa_carbon_management.py  benchmark_auto_mask.py  config.yaml  environment.fixed.yaml  environment.yaml
benchmark/io_api_compare/: README.md  benchmark_io_api.py  plot_io_api.py  tool_compare_results.csv
benchmark/notebooks/: plot-benchmarks.py.ipynb
benchmark/scripts/: benchmark-cbc.py  benchmark-glpk.py  benchmark-gurobi.py  benchmark-jump.jl  benchmark-linopy-manual.py  benchmark-linopy.py  benchmark-pyomo.py  benchmark_cvxpy.py  benchmark_gurobipy.py  benchmark_jump.jl  benchmark_linopy.py  benchmark_matrix_gen.py  benchmark_ortools.py  benchmark_pulp.py  benchmark_pyomo.py  benchmark_scaling.py  branchmark_pulp.py  common.py  concat-benchmarks.py  merge-benchmarks.py  plot-benchmarks.py  run-cvxpy.py  run-gurobipy.py  run-linopy.py  run-ortools.py  run-pulp.py  run-pyomo.py  (+2 more)
benchmarks/: README.md  __init__.py  __main__.py  bench.py  benchmark_memory.py  cli.py  compare.py  conftest.py  memory.py  ops.py  phases.py  plotting.py  registry.py  run.py  snapshot.py  sweep.py  test_bench.py  test_build.py  test_lp_write.py  test_matrices.py  test_memory_id_alignment.py  test_netcdf.py  test_pipeline.py  test_pypsa_carbon_management.py  test_solver_handoff.py  test_to_lp.py  test_to_solver.py  walkthrough.md
dev-scripts/: SOLVER_CAPABILITIES_PLAN.md  benchmark_bottlenecks.py  benchmark_lp_writer.py  benchmark_lp_writer_commits.py  benchmark_printing.py  benchmark_scaling.py  benchmark_sparsity_memory.py  piecewise-feasibility-tests-walkthrough.ipynb  profile_model_memory.py  proto_deferred_bench.py  proto_deferred_check.py  proto_deferred_groupby.py  quadratic_constraint_example.py  quadratic_constraints_plan.md  quadratic_constraints_remaining_tasks.md  quadratic_constraints_status.md
doc/: Makefile  api-common.rst  api-constraints.rst  api-eval.rst  api-expressions.rst  api-io.rst  api-model.rst  api-solvers.rst  api-variables.rst  api.rst  arithmetic-convention.nblink  benchmark.rst  coming-from-other-tools.rst  conf.py  contributing.rst  coordinate-alignment.nblink  create-a-model-with-coordinates.nblink  creating-constraints.nblink  creating-expressions.nblink  creating-variables.nblink  energy-resource-build.nblink  first-real-model.nblink  getting-started.nblink  gpu-acceleration.rst  gurobi-double-logging.rst  index.rst  infeasible-model.nblink  installation.rst  iterative-resolving.nblink  logo.py  manipulating-models.nblink  memory-best-practices.nblink  migrating-from-pyomo.nblink  migrating-to-v1.rst  missing-data.nblink  piecewise-inequality-bounds-tutorial.nblink  piecewise-linear-constraints-tutorial.nblink  piecewise-linear-constraints.rst  pips-installation.rst  plasmo-benders.rst  (+22 more)
examples/: _nan-edge-cases.ipynb  arithmetic-convention.ipynb  coordinate-alignment.ipynb  create-a-model-with-coordinates.ipynb  create-a-model.ipynb  creating-constraints.ipynb  creating-expressions.ipynb  creating-variables.ipynb  energy-resource-build.ipynb  first-real-model.ipynb  infeasible-model.ipynb  iterative-resolving.ipynb  manipulating-models.ipynb  memory-best-practices.ipynb  migrating-from-pyomo.ipynb  missing-data.ipynb  mixed-coordinate-arithmetic.ipynb  nan-edge-cases.ipynb  optimal-dispatch-pips.ipynb  piecewise-inequality-bounds.ipynb  piecewise-inequality-comparison.ipynb  piecewise-linear-constraints.ipynb  quadratic-constraints.ipynb  quick-start.ipynb  remote-machines.ipynb  solve-on-oetc.ipynb  solve-on-remote.ipynb  solver-api.ipynb  solving-troubleshooting.ipynb  solving.ipynb  sudoku.ipynb  testing-framework.ipynb  transport-tutorial.ipynb  using-solvers.ipynb  working-with-solvers.ipynb
experiment/: README.md  juliapkg.json  pixi.toml  plasmo-benders-decomposition.ipynb  run_benders.py  testProblem.nc
linopy/: __init__.py  _active_gate.py  alignment.py  common.py  config.py  constants.py  constraints.py  csr.py  dual.py  dualization.py  eval.py  examples.py  expressions.py  io.py  lazy.py  linearization.py  matrices.py  model.py  monkey_patch_xarray.py  objective.py  oetc.py  piecewise.py  pips.py  poi_model.py  remote.py  scaling.py  semantics.py  solver_capabilities.py  solvers.py  sos_reformulation.py  test-remote.py  testing.py  types.py  variables.py  version.py
paper/: paper.bib  paper.jats  paper.md
test/: conftest.py  test.nc  test_algebraic_properties.py  test_alignment.py  test_alignment_contract.py  test_available_solvers.py  test_common.py  test_common_legacy.py  test_compatible_arithmetrics.py  test_constraint.py  test_constraint_coef_dirty.py  test_constraint_label_index.py  test_constraints.py  test_convention.py  test_dtypes.py  test_dual.py  test_dualization.py  test_eval.py  test_examples.py  test_fix.py  test_fix_relax.py  test_frozen_constraint_active_vars.py  test_highs_keyboard_interrupt.py  test_inconsistency_checks.py  test_indicator_constraints.py  test_infeasibility.py  test_io.py  test_label_position.py  test_lazy_groupby.py  test_legacy_violations.py  test_linear_expression.py  test_linear_expression_legacy.py  test_matrices.py  test_mi_feasibility.py  test_model.py  test_model_creation.py  test_objective.py  test_oetc.py  test_oetc_settings.py  test_optimization.py  (+33 more)
tutorials/: transport.ipynb
(+86 files in other folders)
