[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linopy"
dynamic = ["version"]
description = "Linear optimization with N-D labeled arrays in Python"
readme = "README.md"
authors = [{ name = "Fabian Hofmann", email = "fabianmarikhofmann@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]

requires-python = ">=3.9"
dependencies = [
    "numpy<2.0",
    "scipy",
    "bottleneck",
    "toolz",
    "numexpr",
    "xarray>=2024.2.0",
    "dask>=0.18.0",
    "polars",
    "tqdm",
    "deprecation",
]

[project.urls]
Homepage = "https://github.com/PyPSA/linopy"
Source = "https://github.com/PyPSA/linopy"

[project.optional-dependencies]
docs = [
    "ipython==8.26.0",
    "numpydoc==1.7.0",
    "sphinx==7.3.7",
    "sphinx_rtd_theme==2.0.0",
    "sphinx_book_theme==1.1.3",
    "nbsphinx==0.9.4",
    "nbsphinx-link==1.3.0",
    "gurobipy==11.0.2",
    "ipykernel==6.29.5",
    "matplotlib==3.9.1",
]
dev = [
    "pytest",
    "pytest-cov",
    "netcdf4",
    "pre-commit",
    "paramiko",
    "types-paramiko",
    "gurobipy",
    "highspy",
]
solvers = [
    "gurobipy",
    "highspy>=1.5.0; python_version < '3.12'",
    "highspy>=1.7.1; python_version >= '3.12'",
    "cplex; platform_system != 'Darwin' and python_version < '3.12'",
    "mosek",
    "mindoptpy; python_version < '3.12'",
    "coptpy",
    "xpress; platform_system != 'Darwin' and python_version < '3.11'",
    "pyscipopt; platform_system != 'Darwin'",
]

[tool.setuptools.packages.find]
include = ["linopy"]

[tool.setuptools_scm]
write_to = "linopy/version.py"

[tool.coverage.run]
branch = true
source = ["linopy"]
omit = ["test/*"]

[tool.mypy]
ignore_missing_imports = true
# namespace_packages = true
